<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/login_num_pad_color"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

    <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/one"
            android:background="@color/login_num_pad_color"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toEndOf="@+id/two"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/login_num_pad_color"/>

    <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/one"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/login_num_pad_color"/>

    <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/two"
            app:layout_constraintStart_toEndOf="@+id/four"
            android:layout_marginStart="8dp"
            android:background="@color/login_num_pad_color"/>

    <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toEndOf="@+id/five"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/three"
            android:background="@color/login_num_pad_color"/>

    <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/four"
            android:background="@color/login_num_pad_color" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/five"
            app:layout_constraintStart_toEndOf="@+id/seven"
            android:background="@color/login_num_pad_color"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/six"
            app:layout_constraintStart_toEndOf="@+id/eight"
            android:background="@color/login_num_pad_color"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/back"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/three"
            android:layout_marginStart="8dp"
            android:background="@color/login_num_pad_color"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintStart_toEndOf="@+id/six"
            android:background="@color/login_num_pad_color"
            android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/enter"
            android:text="@string/enter"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/zero"
            app:layout_constraintStart_toEndOf="@+id/nine"
            android:background="@color/login_num_pad_color"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>